# GameOfTanks

./: CMakeLists.txt  LICENCE.md  README.md  world_of_tanks.sln
.github/workflows/: cmake.yml  windows_builds.yml
include/: animation.h  graphics.h  healthbar.h  weapon.h
src/: main.cpp
src/Graphics/: animation.cpp  graphics.cpp  healthbar.cpp  weapon.cpp
world_of_tanks/: animation.cpp  animation.h  graphics.cpp  graphics.h  healthbar.cpp  healthbar.h  main.cpp  weapon.cpp  weapon.h  world_of_tanks.vcxproj  world_of_tanks.vcxproj.filters
